force-app/main/default/objects/Quality_Assurance__c/fields/Payment_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement__c</fullName>
    <label>Payment Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-pay</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>PIP/WC Case</fullName>
            </value>
            <value>
                <fullName>Cash Rates/High Deductible</fullName>
            </value>
            <value>
                <fullName>Cash Rates/In Network Only/Tiered</fullName>
            </value>
            <value>
                <fullName>Cash Rates/Medicaid</fullName>
            </value>
            <value>
                <fullName>Cash Rates/No Insurance</fullName>
            </value>
            <value>
                <fullName>Cash Rates</fullName>
                <isActive>false</isActive>
                <label>Cash Rates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>