force-app/main/default/objects/Quality_Assurance__c/fields/Payment_Arrangement_Score__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Score__c</fullName>
    <formula>Effectively_Explained_OON_benefits__c  +  Explained_Patient_Process_at_NJSW__c  +  Leveraged_Benchmarks_DxTests_Equiptment__c +  Educated_Patient_of_Risk_Condition_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Arrangement Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>