force-app/main/default/objects/Quality_Assurance__c/fields/Payment_Arrangement_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Score_Percent__c</fullName>
    <formula>Payment_Arrangement_Score__c  / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Arrangement Score Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>