force-app/main/default/objects/Quality_Assurance__c/fields/Positive_Energy_Tone_Enthusiasm__c.field-meta.xml
<CustomField>
    <fullName>Positive_Energy_Tone_Enthusiasm__c</fullName>
    <label>Positive Energy, Tone, &amp; Enthusiasm</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>