force-app/main/default/objects/Quality_Assurance__c/fields/Potential_Patient__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Patient</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Quality Assurances</relationshipLabel>
    <relationshipName>Quality_Assurances</relationshipName>
    <type>Lookup</type>
</CustomField>