force-app/main/default/objects/Quality_Assurance__c/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Office</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Brunswick</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Matawan</fullName>
            </value>
            <value>
                <fullName>Old Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>