force-app/main/default/objects/Quality_Assurance__c/fields/Previous_Diagnostic_Tests__c.field-meta.xml
<CustomField>
    <fullName>Previous_Diagnostic_Tests__c</fullName>
    <label>Previous Diagnostic Tests</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>