force-app/main/default/objects/Quality_Assurance__c/fields/Previous_Provider_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Provider_Treatment__c</fullName>
    <description>Identified any previous provider treatment with names of providers and services completed (treatment, diagnostic test, scripts)</description>
    <label>Previous Provider Treatment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>