force-app/main/default/objects/Quality_Assurance__c/fields/Provide_Required_Information__c.field-meta.xml
<CustomField>
    <fullName>Provide_Required_Information__c</fullName>
    <label>Provide Required Information</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>