force-app/main/default/objects/Quality_Assurance__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Providers</valueSetName>
    </valueSet>
</CustomField>