force-app/main/default/objects/Quality_Assurance__c/fields/Provider_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Provider_Criteria__c</fullName>
    <label>Provider Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>