force-app/main/default/objects/Quality_Assurance__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>