force-app/main/default/objects/Quality_Assurance__c/fields/PT_Script__c.field-meta.xml
<CustomField>
    <fullName>PT_Script__c</fullName>
    <label>PT Script</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has PT Script</fullName>
            </value>
            <value>
                <fullName>Needs PT Script</fullName>
            </value>
            <value>
                <fullName>PT not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>