force-app/main/default/objects/Quality_Assurance__c/fields/QA_Audit_By__c.field-meta.xml
<CustomField>
    <fullName>QA_Audit_By__c</fullName>
    <label>QA Audit By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quality_Assurance_Employees</valueSetName>
    </valueSet>
</CustomField>