force-app/main/default/objects/Quality_Assurance__c/fields/QA_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>QA_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Audit Complete</label>
    <type>Checkbox</type>
</CustomField>