force-app/main/default/objects/Quality_Assurance__c/fields/QA_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Status__c</fullName>
    <label>DNU-12/2020-QA Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Intake Recorded</fullName>
            </value>
            <value>
                <fullName>Intake Audit Complete</fullName>
            </value>
            <value>
                <fullName>No PA Recorded</fullName>
            </value>
            <value>
                <fullName>PA Audit Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>