force-app/main/default/objects/Quality_Assurance__c/fields/Related_to_MVA_WC__c.field-meta.xml
<CustomField>
    <fullName>Related_to_MVA_WC__c</fullName>
    <description>Identified if related to MVA or WC</description>
    <inlineHelpText>Identified if related to MVA or WC</inlineHelpText>
    <label>Related to MVA/WC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>