force-app/main/default/objects/Quality_Assurance__c/fields/Scheduled_Appt_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Appt_Time__c</fullName>
    <label>Scheduled Appt Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Morning (Before 9am)</fullName>
            </value>
            <value>
                <fullName>Early Afternoon (9am-2pm)</fullName>
            </value>
            <value>
                <fullName>Late Afternoon (3pm-6pm)</fullName>
            </value>
            <value>
                <fullName>Evening (After 6pm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>