force-app/main/default/objects/Quality_Assurance__c/fields/Scheduled_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Correctly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Correctly</label>
    <type>Checkbox</type>
</CustomField>