force-app/main/default/objects/Quality_Assurance__c/fields/Scheduled_Office__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Office__c</fullName>
    <label>Scheduled Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Brunswick</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Matawan</fullName>
            </value>
            <value>
                <fullName>Old Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>