force-app/main/default/objects/Quality_Assurance__c/fields/Scheduled_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Status__c</fullName>
    <label>Scheduled Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Therapy Correct</fullName>
            </value>
            <value>
                <fullName>Physical Therapy Incorrect</fullName>
            </value>
            <value>
                <fullName>Conservative Correct</fullName>
            </value>
            <value>
                <fullName>Conservative Incorrect</fullName>
            </value>
            <value>
                <fullName>Medical Correct</fullName>
            </value>
            <value>
                <fullName>Medical Incorrect</fullName>
            </value>
            <value>
                <fullName>Referred to External Provider</fullName>
            </value>
            <value>
                <fullName>Not Referred to External Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>