force-app/main/default/objects/Quality_Assurance__c/fields/Scheduling_Score__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Score__c</fullName>
    <label>Scheduling Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>