force-app/main/default/objects/Quality_Assurance__c/fields/Scubscriber_Information__c.field-meta.xml
<CustomField>
    <fullName>Scubscriber_Information__c</fullName>
    <description>Asked for subscriber information if not patient (self); Name, DOB, employer</description>
    <inlineHelpText>Asked for subscriber information if not patient (self); Name, DOB, employer</inlineHelpText>
    <label>Scubscriber Information</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>