force-app/main/default/objects/Quality_Assurance__c/fields/Secondary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance__c</fullName>
    <description>Confirmed if there is a secondary insurer</description>
    <inlineHelpText>Confirmed if there is a secondary insurer</inlineHelpText>
    <label>Secondary Insurance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>