force-app/main/default/objects/Quality_Assurance__c/fields/Self_Pay_No_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Self_Pay_No_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Pay/ No Insurance</label>
    <type>Checkbox</type>
</CustomField>