force-app/main/default/objects/Quality_Assurance__c/fields/Should_Have_Been_Scheduled_With__c.field-meta.xml
<CustomField>
    <fullName>Should_Have_Been_Scheduled_With__c</fullName>
    <label>Should Have Been Scheduled With?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Correctly</fullName>
            </value>
            <value>
                <fullName>Orthopedic Spine/Pain Management</fullName>
            </value>
            <value>
                <fullName>Orthopedic Joint &amp; Extremity/Pain Management</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle Specialist</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Physical Therapy/ Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>