force-app/main/default/objects/Quality_Assurance__c/fields/Solutions_Driven__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Driven__c</fullName>
    <label>Solutions Driven</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>