force-app/main/default/objects/Quality_Assurance__c/fields/Total_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Call_Time__c</fullName>
    <description>Amount of time on the call</description>
    <inlineHelpText>Amount of time on the call</inlineHelpText>
    <label>Total Call Time (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>