force-app/main/default/objects/Quality_Assurance__c/fields/Total_Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Calls__c</fullName>
    <label>Total Number of Calls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>