force-app/main/default/objects/Quality_Assurance__c/fields/Training_Grade__c.field-meta.xml
<CustomField>
    <fullName>Training_Grade__c</fullName>
    <label>Training Grade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empathy (+)</fullName>
            </value>
            <value>
                <fullName>Empathy (-)</fullName>
            </value>
            <value>
                <fullName>Tone of Voice (+)</fullName>
            </value>
            <value>
                <fullName>Tone of Voice (-)</fullName>
            </value>
            <value>
                <fullName>Scheduling (+)</fullName>
            </value>
            <value>
                <fullName>Scheduling (-)</fullName>
            </value>
            <value>
                <fullName>Asked All Questions</fullName>
            </value>
            <value>
                <fullName>Missed Questions</fullName>
            </value>
            <value>
                <fullName>MVA/PIP or WC (+)</fullName>
            </value>
            <value>
                <fullName>MVA/PIP or WC (-)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>