force-app/main/default/objects/Quality_Assurance__c/fields/Verified_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Verified_Name_Number__c</fullName>
    <description>Verified Name and phone number of caller</description>
    <inlineHelpText>Verified Name and phone number of caller</inlineHelpText>
    <label>Verified Name &amp; Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>