force-app/main/default/objects/Quality_Assurance__c/fields/Voicemail_Delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Delivery_Score__c</fullName>
    <formula>Positive_Energy_Tone_Enthusiasm__c  +  Message_was_concise__c</formula>
    <label>Voicemail Delivery Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>