force-app/main/default/objects/Quality_Assurance__c/fields/Voicemail_Delivery_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Delivery_Score_Percent__c</fullName>
    <formula>Voicemail_Delivery_Score__c  / 4</formula>
    <label>Voicemail Delivery Score Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>