force-app/main/default/objects/Quality_Assurance__c/fields/Voicemail_Score__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Score__c</fullName>
    <formula>Identified_Self_Company__c  +  Explained_Reason_For_Call__c  + HIPPA_Compliant__c  +  Mentioned_Call_Back_Number__c</formula>
    <label>Voicemail Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>