force-app/main/default/objects/Quality_Assurance__c/fields/Voicemail_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Score_Percentage__c</fullName>
    <formula>Voicemail_Score__c  / 5</formula>
    <label>Voicemail Score Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>