force-app/main/default/objects/Quality_Assurance__c/fields/Wellness_Goals__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Goals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Identified Wellness Goals</description>
    <inlineHelpText>Identified Wellness Goals</inlineHelpText>
    <label>Bonus - Wellness Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>