force-app/main/default/objects/Quality_Assurance__c/recordTypes/Appointment_Change_Audit.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Change_Audit</fullName>
    <active>true</active>
    <label>Appointment Change Audit</label>
</RecordType>