force-app/main/default/objects/Quality_Assurance__c/recordTypes/Do_Not_Use.recordType-meta.xml
<RecordType>
    <fullName>Do_Not_Use</fullName>
    <active>true</active>
    <label>Do Not Use</label>
</RecordType>