force-app/main/default/objects/Quality_Assurance__c/recordTypes/Intake_Audit.recordType-meta.xml
<RecordType>
    <fullName>Intake_Audit</fullName>
    <active>true</active>
    <label>Intake Audit</label>
</RecordType>