force-app/main/default/objects/Quality_Assurance__c/recordTypes/Other_Call_Audit.recordType-meta.xml
<RecordType>
    <fullName>Other_Call_Audit</fullName>
    <active>true</active>
    <label>Other Call Audit</label>
</RecordType>