force-app/main/default/objects/Quality_Assurance__c/recordTypes/Payment_Arrangement_Audit.recordType-meta.xml
<RecordType>
    <fullName>Payment_Arrangement_Audit</fullName>
    <active>true</active>
    <label>Payment Arrangement Audit</label>
</RecordType>