force-app/main/default/objects/Quality_Assurance__c/recordTypes/Voicemail_Audit.recordType-meta.xml
<RecordType>
    <fullName>Voicemail_Audit</fullName>
    <active>true</active>
    <label>Voicemail Audit</label>
</RecordType>