force-app/main/default/objects/Quality_Assurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Call_Audit_Type__c</columns>
    <columns>QA_Audit_By__c</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Date_of_Call__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>