force-app/main/default/objects/Quality_Assurance__c/listViews/Jenn_s_Team_Audit.listView-meta.xml
<ListView>
    <fullName>Jenn_s_Team_Audit</fullName>
    <columns>Call_Audit_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>General_Notes__c</columns>
    <columns>NAME</columns>
    <columns>Date_of_Call__c</columns>
    <columns>Intake_Score_Percentage__c</columns>
    <columns>Insurance_Score_Percent__c</columns>
    <columns>Claim_Information_Percent__c</columns>
    <columns>Delivery_Comprehension_Percentage__c</columns>
    <columns>Payment_Arrangement_Score_Percent__c</columns>
    <columns>Delivery_Score_Percentage__c</columns>
    <columns>Appointment_Change_Score_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee__c</field>
        <operation>equals</operation>
        <value>Amber Brusca,Ashley Dalton,Catherine Crespo,Christine Comar,Laura Rivera,Leann Ruff,Thomas Banafato</value>
    </filters>
    <filters>
        <field>Manager_Audit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Jenn&apos;s Team Audit</label>
</ListView>